samples/_failures_safe/1761525360_c7927c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_091a1366.c: In function ‘tokenize_operator’:
./samples/SAFE/__tmp_091a1366.c:165:5: error: expected expression at end of input
  165 |     size_t index =
      |     ^~~~~~
./samples/SAFE/__tmp_091a1366.c:165:5: error: expected declaration or statement at end of input
